# MainBoardFirmware

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  144.Constraint  Brushless_Controller.SchDoc  CMakeLists.txt  CMakePresets.json  Constraint 1.Constraint  Firmware.uvprojx  Flash.c  GlobalVars.h  IR-Decoder.SchDoc  ImmortalsEmbedded.PrjEmb  ImmortalsEmbedded.PrjEmb.cri  ImmortalsFirmware.PrjEmb  ImmortalsFirmware.PrjFpg  Kicker.SchDoc  PID.SchDoc  PID.V  PWM_Generator.SchDoc  Process.h  README.md  Servo_Driver.SchDoc  Sheet1 - Copy.SchDoc  Sheet1.SchDoc  Software Platform1.SwPlatform  Source1.C  Source2.C  System1.OpenBus  TSK3000.PrjFpg  TSK3000.PrjFpgStructure  TSK51.PrjEmb  TSK52.PrjEmb  Verilog1.V  Verilog2.V  control_loop.SchDoc  data_lite.h  debug_io.c  debug_io.h  (+67 more)
cmake/: helpers.cmake
data/: config.toml
data/motor-config/: limits.ini  pi_control.ini  selectors.ini
source/: CMakeLists.txt  command.cpp  command.h  main.cpp  micro.cpp  micro.h  motor.cpp  motor.h  pch.h  services.h  setting.h  spi_hal.c  spi_hal.h
source/common/: CMakeLists.txt  pch.h  services.cpp  services.h  setting.h
source/common/config/: base.h  config.h  file.cpp  file.h
source/common/logging/: logging.cpp  logging.h  macros.h
source/common/network/: address.h  udp_client.h  udp_server.cpp  udp_server.h
source/config/: config.cpp
source/daemon/: CMakeLists.txt  command.cpp  command.h  main.cpp  micro.cpp  micro.h  motor.cpp  motor.h  pch.h  spi_hal.c  spi_hal.h
source/daemon/icm-42688/: device.cpp  device.h  device_inl.h  fifo.cpp  fifo.h  hal.h  registers.h
source/daemon/mock_pigpio/: pigpio.c  pigpio.h
source/logging/: logging.cpp  logging.h  macros.h
src/: main.c
src/components/drivers_nrf/saadc/: nrf_drv_saadc.c
src/components/libraries/uart/: app_uart_fifo.c
src/config/: sdk_config.h
src/core/: Process.h  current_sensors.h  my_ADC.h  my_UART.h  my_esb_RF.h
tests/: CMakeLists.txt
